Sutter Health/src/objects/Document_Benefit_Plan__c.object
<CustomObject>
    <fields>
        <fullName>AncillaryEOC__c</fullName>
        <label>Ancillary EOC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AncillaryGSA__c</fullName>
        <label>Ancillary GSA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AncillarySOB__c</fullName>
        <label>Ancillary SOB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCM__c</fullName>
        <label>BCM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Date_Generated__c</fullName>
        <formula>now()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch Date Generated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Batch_Id__c</fullName>
        <formula>(left(right(text(now()),6),2))&amp;

      (left(right(text(now()),9),2)&amp;     

      text(DAY(DATEVALUE(now())))&amp;

      text(Month(DATEVALUE(now())))&amp;

      text(Year(DATEVALUE(now()))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Name__c</fullName>
        <formula>$User.LastName  &amp;&quot;-&quot; &amp;   Text(Today())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Plan_ID__c</fullName>
        <label>Benefit Plan ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Version__c</fullName>
        <label>Benefit Version</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Document_Generation_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Generation Request</label>
        <referenceTo>Document_Generation_Request__c</referenceTo>
        <relationshipLabel>Document Benefit Plans</relationshipLabel>
        <relationshipName>Document_Benefit_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EOC__c</fullName>
        <label>EOC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_End_Date__c</fullName>
        <label>Plan End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_ID_SFDC__c</fullName>
        <label>Plan ID_SFDC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Id_HCC_Parent__c</fullName>
        <formula>MID( Name , 1, 4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Id HCC Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_IsCustom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Plan_IsCustom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_IsHDHP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Plan_IsHDHP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_IsNot12Months__c</fullName>
        <formula>If(IF( 
(  Plan_End_Date__c -  Plan_Start_Date__c ) / 365 * 12 &lt; 1, 1, ROUND((Plan_End_Date__c - Plan_Start_Date__c ) / 365 * 12,1) 
)= 12,false,true)</formula>
        <label>Plan_IsNot12Months</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_Name_Alternate__c</fullName>
        <label>Plan Name Alternate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <label>Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_OR_Rider_Name__c</fullName>
        <description>If the Rider name is null, then dispaly the plan name</description>
        <formula>IF( Rider_Plan_Name__c = &apos;&apos;,  Plan_Name__c ,  Rider_Plan_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan OR Rider Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Start_Date__c</fullName>
        <label>Plan Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <label>Plan Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Year__c</fullName>
        <label>Plan Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rider_Plan_Name__c</fullName>
        <label>Rider Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBC__c</fullName>
        <label>SBC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Document Benefit Plan</label>
    <nameField>
        <label>Medical Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Benefit Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>